--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,11 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <deltaspike.data.module.version>1.9.1</deltaspike.data.module.version>
+        <jnosql.version>0.0.7</jnosql.version>
         <lombok.version>1.18.4</lombok.version>
         <weld.version>3.0.5.Final</weld.version>
         <jackson.databind.version>2.9.10.1</jackson.databind.version>
+        <code.gson.version>2.8.5</code.gson.version>
         <activemq.client.and.broker.version>5.15.11</activemq.client.and.broker.version>
         <commons.email.version>1.5</commons.email.version>
 		<commons.beanutils.version>1.9.3</commons.beanutils.version>
@@ -43,9 +45,31 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
+            <groupId>org.jnosql.artemis</groupId>
+            <artifactId>artemis-document</artifactId>
+            <version>${jnosql.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jnosql.diana</groupId>
+            <artifactId>mongodb-driver</artifactId>
+            <version>${jnosql.version}</version>
+            <exclusions>
+                <!-- Strange dependency on a test tool: to be removed? -->
+                <exclusion>
+                    <groupId>de.flapdoodle.embed</groupId>
+                    <artifactId>de.flapdoodle.embed.mongo</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>${jackson.databind.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>${code.gson.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
