--- a/.gitignore
+++ b/.gitignore
@@ -222,3 +222,4 @@ buildNumber.properties
 .mvn/wrapper/maven-wrapper.jar
 .flattened-pom.xml
 # End of https://www.gitignore.io/api/linux,windows,eclipse,intellij+all,visualstudiocode
+/src/main/resources/META-INF/Ano-2019.json
